--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ body {
   background-color: #f1f1f1;
 }
 
+.footer li{
+  margin: 0.5rem 0.2rem;
+}
+button{
+  user-select: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
