--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #f1f1f1;
 }
+label{
+  margin-bottom: 0.3rem;
+ font-size: 1.05rem;
+ font-weight: bold;
+ color: #112827;
+}
+
+input, 
+textarea {
+  background-color: #f1f1f1;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+  margin-bottom: 2rem;
+
+  color: #373636;
+  font-weight: 600;
+}
 
 .footer li{
   margin: 0.5rem 0.2rem;
